tests/externInfo/dhrystone-exported/db/invalid/path/malloc_x.c.loc
69.3.0.6509 70.3.0.6517 71.3.0.6525 